<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="w0269804.movietrailers.MovieTrailers" >

    <TextView
        android:id="@+id/tvFilmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="15"
        android:text="@string/txtAppIntro" />

    <Button
        android:id="@+id/btnAddFilm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="viewFilmList"
        android:text="@string/btnViewFilms" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="viewAddForm"
        android:text="@string/btnAddFilns" />

</LinearLayout>
