<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="w0269804.movietrailers.ViewTrailer" >

    <VideoView
        android:id="@+id/vViewTrailer"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_above="@+id/btnPlay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/btnAddFilm"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btnPauseLabel" />

    <Button
        android:id="@+id/btnBack"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnAddFilm"
        android:layout_alignBottom="@+id/btnAddFilm"
        android:layout_toRightOf="@+id/btnAddFilm"
        android:text="@string/btnBackLabel" />

    <Button
        android:id="@+id/btnForward"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnBack"
        android:layout_alignBottom="@+id/btnBack"
        android:layout_toRightOf="@+id/btnBack"
        android:text="@string/btnForwardLabel" />

    <Button
        android:id="@+id/btnStop"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnForward"
        android:layout_alignBottom="@+id/btnForward"
        android:layout_alignRight="@+id/btnPlay"
        android:layout_toRightOf="@+id/btnForward"
        android:text="@string/btnStopLabel" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAddFilm"
        android:layout_alignLeft="@+id/btnAddFilm"
        android:layout_alignRight="@+id/vViewTrailer"
        android:text="@string/btnPlayLabel" />

</RelativeLayout>