<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="w0269804.movietrailers.AddFilm" >

    <TextView
        android:id="@+id/tvFilmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/lblFilmTitle" />

    <EditText
        android:id="@+id/etAddTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFilmTitle"
        android:layout_centerHorizontal="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvFilmDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAddTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/lblFilmDescription" />

    <EditText
        android:id="@+id/etAddDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etAddTitle"
        android:layout_below="@+id/tvFilmDescription"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLines="5" />

    <Button
        android:id="@+id/btnPause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAddDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:onClick="addFilm"
        android:text="@string/btnAddFilmLabel" />

</RelativeLayout>